horizontal scrolling and fixed weird flickering while horizontal scrolling

--- a/src/components/Preview.css
+++ b/src/components/Preview.css
@@ -1,11 +1,12 @@
 .preview-wrapper {
   position: relative;
   height: 100%;
+  flex-grow: 1;
 }
 
 .preview-wrapper iframe {
   height: 100%;
-  background-color: antiquewhite;
+  width: 100%;
 }
 
 /*Solution to prevent drag events get swallowed by the iFrame*/
